Change swerv.config, add new ZBG extension

--- a/configs/swerv.config
+++ b/configs/swerv.config
@@ -195,6 +195,8 @@ Parameters that can be set by the end user:
           Bit manipulation extension ZBr enabled/legal
      -set=bitmanip_zbs = {0,1}
           Bit manipulation extension ZBs enabled/legal
+     -set=bitmanip_zbg = {0,1}
+          Bit manipulation extension ZBg enabled/legal
      -fpga_optimize =   { 0, 1 }
           if 1, minimize clock-gating to facilitate FPGA builds
      -text_in_iccm = {0, 1}
@@ -316,6 +318,7 @@ my $bitmanip_zbf = 0;
 my $bitmanip_zbp = 0;
 my $bitmanip_zbr = 0;
 my $bitmanip_zbs = 1;
+my $bitmanip_zbg = 0;
 
 GetOptions(
     "help"                => \$help,
@@ -902,6 +905,7 @@ our %config = (#{{{
         "bitmanip_zbp"             => $bitmanip_zbp,                    # Design Parm, Overridable
         "bitmanip_zbr"             => $bitmanip_zbr,                    # Design Parm, Overridable
         "bitmanip_zbs"             => $bitmanip_zbs,                    # Design Parm, Overridable
+        "bitmanip_zbg"             => $bitmanip_zbg,                    # Design Parm, Overridable
         "fast_interrupt_redirect"  => "$fast_interrupt_redirect",       # Design Parm, Overridable
         "lsu2dma"            => $lsu2dma,                               # used by design/TB for LSU to DMA bridge
         "fpga_optimize"      => $fpga_optimize                          # Optimize fpga speed by removing clock gating
@@ -1128,6 +1132,7 @@ our %verilog_parms = (
         "bitmanip_zbf"            => '1',
         "bitmanip_zbp"            => '1',
         "bitmanip_zbr"            => '1',
+        "bitmanip_zbg"            => '1',
         "fast_interrupt_redirect" => '1',
 
         "inst_access_enable0" => '1',
@@ -2384,7 +2389,8 @@ sub dump_whisper_config{#{{{
     $jh{enable_zbf} = $config{core}{bitmanip_zbf};
     $jh{enable_zbp} = $config{core}{bitmanip_zbp};
     $jh{enable_zbr} = $config{core}{bitmanip_zbr};
-
+    $jh{enable_zbg} = $config{core}{bitmanip_zbg};
+    
     # Collect pic configs.
     if (exists $config{pic}) {
         my %mem_mapped;
